Windows11Style: Improve QCheckBox and QRadioButton drawings

Sync the drawing of QCheckBox and QRadioButton with the WinUI 3 style.
 - don't draw borders when checked
 - make color a little bit lighter for mouseover
 - use QPalette::Window for checkmark indicator
 - use buttonFillBrush() also for QRadioButton
 - avoid double drawings and combine drawings when possible

Task-number: QTBUG-138094
Change-Id: Ibf20ed3e44e622d16236730e835263d5d637da49
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit f26fd50d0a3b664ff9de6ac339137d854c533d55)